--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "type": "module",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "airtable": "^0.11.6",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^105.0.0",
     "mongoose": "^7.0.1",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "nodemailer": "^6.9.1"
   }
 }
