--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
     "mongoose": "^7.0.1",
     "node-fetch": "^3.3.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "util": "^0.12.5"
   }
 }
