--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^7.0.1",
     "node-fetch": "^3.3.1",
     "nodemailer": "^6.9.1",
+    "puppeteer": "^19.8.3",
     "util": "^0.12.5"
   }
 }
