--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "airtable": "^0.11.6",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
